@@ -396,6 +396,8 @@ SP_STUB_2(ppl_Polyhedron_poly_hull_assign)
 SP_STUB_2(ppl_Polyhedron_poly_hull_assign_and_minimize)
 SP_STUB_2(ppl_Polyhedron_poly_difference_assign)
 SP_STUB_2(ppl_Polyhedron_poly_difference_assign_and_minimize)
+SP_STUB_2(ppl_Polyhedron_BBRZ02_widening_assign)
+SP_STUB_3(ppl_Polyhedron_limited_BBRZ02_widening_assign)
 SP_STUB_2(ppl_Polyhedron_H79_widening_assign)
 SP_STUB_3(ppl_Polyhedron_limited_H79_widening_assign)
 SP_STUB_1(ppl_Polyhedron_topological_closure_assign)
@@ -460,6 +462,8 @@ ppl_sicstus_init(int /* when */) {
   SP_DEFINE_C_PREDICATE(ppl_Polyhedron_poly_hull_assign_and_minimize, 2);
   SP_DEFINE_C_PREDICATE(ppl_Polyhedron_poly_difference_assign, 2);
   SP_DEFINE_C_PREDICATE(ppl_Polyhedron_poly_difference_assign_and_minimize, 2);
+  SP_DEFINE_C_PREDICATE(ppl_Polyhedron_BBRZ02_widening_assign, 2);
+  SP_DEFINE_C_PREDICATE(ppl_Polyhedron_limited_BBRZ02_widening_assign, 3);
   SP_DEFINE_C_PREDICATE(ppl_Polyhedron_H79_widening_assign, 2);
   SP_DEFINE_C_PREDICATE(ppl_Polyhedron_limited_H79_widening_assign, 3);
   SP_DEFINE_C_PREDICATE(ppl_Polyhedron_topological_closure_assign, 1);
