@@ -339,6 +339,8 @@ static PL_extension predicates[] = {
   PL_EXTENSION_ENTRY(ppl_Polyhedron_poly_hull_assign_and_minimize, 2)
   PL_EXTENSION_ENTRY(ppl_Polyhedron_poly_difference_assign, 2)
   PL_EXTENSION_ENTRY(ppl_Polyhedron_poly_difference_assign_and_minimize, 2)
+  PL_EXTENSION_ENTRY(ppl_Polyhedron_BBRZ02_widening_assign, 2)
+  PL_EXTENSION_ENTRY(ppl_Polyhedron_limited_BBRZ02_widening_assign, 3)
   PL_EXTENSION_ENTRY(ppl_Polyhedron_H79_widening_assign, 2)
   PL_EXTENSION_ENTRY(ppl_Polyhedron_limited_H79_widening_assign, 3)
   PL_EXTENSION_ENTRY(ppl_Polyhedron_topological_closure_assign, 1)
