@@ -16,6 +16,8 @@
 	ppl_Polyhedron_poly_hull_assign_and_minimize/2,
 	ppl_Polyhedron_poly_difference_assign/2,
 	ppl_Polyhedron_poly_difference_assign_and_minimize/2,
+	ppl_Polyhedron_BBRZ02_widening_assign/2,
+	ppl_Polyhedron_limited_BBRZ02_widening_assign/3,
 	ppl_Polyhedron_H79_widening_assign/2,
 	ppl_Polyhedron_limited_H79_widening_assign/3,
         ppl_Polyhedron_topological_closure_assign/1,
