@@ -391,6 +391,8 @@ Integer_to_integer_term(const PPL::Integer& n) {
 #define ppl_Polyhedron_poly_hull_assign_and_minimize xsb_stub_ppl_Polyhedron_poly_hull_assign_and_minimize
 #define ppl_Polyhedron_poly_difference_assign xsb_stub_ppl_Polyhedron_poly_difference_assign
 #define ppl_Polyhedron_poly_difference_assign_and_minimize xsb_stub_ppl_Polyhedron_poly_difference_assign_and_minimize
+#define ppl_Polyhedron_BBRZ02_widening_assign xsb_stub_ppl_Polyhedron_BBRZ02_widening_assign
+#define ppl_Polyhedron_limited_BBRZ02_widening_assign xsb_stub_ppl_Polyhedron_limited_BBRZ02_widening_assign
 #define ppl_Polyhedron_H79_widening_assign xsb_stub_ppl_Polyhedron_H79_widening_assign
 #define ppl_Polyhedron_limited_H79_widening_assign xsb_stub_ppl_Polyhedron_limited_H79_widening_assign
 #define ppl_Polyhedron_topological_closure_assign xsb_stub_ppl_Polyhedron_topological_closure_assign
@@ -443,6 +445,8 @@ Integer_to_integer_term(const PPL::Integer& n) {
 #undef ppl_Polyhedron_poly_hull_assign_and_minimize
 #undef ppl_Polyhedron_poly_difference_assign
 #undef ppl_Polyhedron_poly_difference_assign_and_minimize
+#undef ppl_Polyhedron_BBRZ02_widening_assign
+#undef ppl_Polyhedron_limited_BBRZ02_widening_assign
 #undef ppl_Polyhedron_H79_widening_assign
 #undef ppl_Polyhedron_limited_H79_widening_assign
 #undef ppl_Polyhedron_topological_closure_assign
@@ -533,6 +537,8 @@ XSB_ENTRY_2(ppl_Polyhedron_poly_hull_assign)
 XSB_ENTRY_2(ppl_Polyhedron_poly_hull_assign_and_minimize)
 XSB_ENTRY_2(ppl_Polyhedron_poly_difference_assign)
 XSB_ENTRY_2(ppl_Polyhedron_poly_difference_assign_and_minimize)
+XSB_ENTRY_2(ppl_Polyhedron_BBRZ02_widening_assign)
+XSB_ENTRY_3(ppl_Polyhedron_limited_BBRZ02_widening_assign)
 XSB_ENTRY_2(ppl_Polyhedron_H79_widening_assign)
 XSB_ENTRY_3(ppl_Polyhedron_limited_H79_widening_assign)
 XSB_ENTRY_1(ppl_Polyhedron_topological_closure_assign)
