@@ -398,6 +398,8 @@ YAP_STUB_2(ppl_Polyhedron_poly_hull_assign)
 YAP_STUB_2(ppl_Polyhedron_poly_hull_assign_and_minimize)
 YAP_STUB_2(ppl_Polyhedron_poly_difference_assign)
 YAP_STUB_2(ppl_Polyhedron_poly_difference_assign_and_minimize)
+YAP_STUB_2(ppl_Polyhedron_BBRZ02_widening_assign)
+YAP_STUB_3(ppl_Polyhedron_limited_BBRZ02_widening_assign)
 YAP_STUB_2(ppl_Polyhedron_H79_widening_assign)
 YAP_STUB_3(ppl_Polyhedron_limited_H79_widening_assign)
 YAP_STUB_1(ppl_Polyhedron_topological_closure_assign)
@@ -454,6 +456,8 @@ init() {
   YAP_USER_C_PREDICATE(ppl_Polyhedron_poly_hull_assign_and_minimize, 2);
   YAP_USER_C_PREDICATE(ppl_Polyhedron_poly_difference_assign, 2);
   YAP_USER_C_PREDICATE(ppl_Polyhedron_poly_difference_assign_and_minimize, 2);
+  YAP_USER_C_PREDICATE(ppl_Polyhedron_BBRZ02_widening_assign, 2);
+  YAP_USER_C_PREDICATE(ppl_Polyhedron_limited_BBRZ02_widening_assign, 3);
   YAP_USER_C_PREDICATE(ppl_Polyhedron_H79_widening_assign, 2);
   YAP_USER_C_PREDICATE(ppl_Polyhedron_limited_H79_widening_assign, 3);
   YAP_USER_C_PREDICATE(ppl_Polyhedron_topological_closure_assign, 1);
