@@ -46,10 +46,14 @@ check_all :-
   polyhull_assign_min,
   polydiff_assign,
   polydiff_assign_min,
-  widen_C,
-  lim_widen_C,
-  widen_NNC,
-  lim_widen_NNC,
+  bbrz02_widen_C,
+  lim_bbrz02_widen_C,
+  bbrz02_widen_NNC,
+  lim_bbrz02_widen_NNC,
+  h79_widen_C,
+  lim_h79_widen_C,
+  h79_widen_NNC,
+  lim_h79_widen_NNC,
   top_close_assign,
   add_con,
   add_gen,
@@ -377,9 +381,64 @@ polydiff_assign_min :-
   ppl_delete_Polyhedron(P1),
   ppl_delete_Polyhedron(P2).
 
+% Tests ppl_Polyhedron_BBRZ02_widening_assign
+% (using C Polyhedra).
+bbrz02_widen_C :-
+  A = '$VAR'(0), B = '$VAR'(1),
+  ppl_new_Polyhedron_from_dimension(c, 2, P),
+  ppl_new_Polyhedron_from_constraints(c, [A >= 1, B >= 0], Q),
+  ppl_Polyhedron_BBRZ02_widening_assign(P, Q),
+  ppl_Polyhedron_get_constraints(P, CP),
+  ppl_Polyhedron_get_constraints(Q, CQ),
+  CP = [],
+  CQ = [1*A >= 1, 1*B >= 0],
+  ppl_delete_Polyhedron(P),
+  ppl_delete_Polyhedron(Q).
+
+% Tests ppl_Polyhedron_limited_BBRZ02_widening_assign
+% (using C Polyhedra).
+lim_bbrz02_widen_C :-
+  A = '$VAR'(0), B = '$VAR'(1),
+  ppl_new_Polyhedron_from_dimension(c, 2, P),
+  ppl_new_Polyhedron_from_constraints(c, [A >= 1, B >= 0], Q),
+  ppl_Polyhedron_add_constraints_and_minimize(Q, [A >= 1, B >= 0]),
+  ppl_Polyhedron_limited_BBRZ02_widening_assign(P, Q, [A >= 2, B >= 1]),
+  ppl_Polyhedron_get_constraints(P, CS),
+  CS = [1*A >= 2, 1*B >= 1],
+  ppl_delete_Polyhedron(P),
+  ppl_delete_Polyhedron(Q).
+
+% Tests ppl_Polyhedron_BBRZ02_widening_assign
+% (using NNC Polyhedra).
+bbrz02_widen_NNC :-
+  A = '$VAR'(0), B = '$VAR'(1),
+  ppl_new_Polyhedron_from_dimension(nnc, 2, P),
+  ppl_new_Polyhedron_from_constraints(nnc, [A >= 1, B >= 0], Q),
+  ppl_Polyhedron_BBRZ02_widening_assign(P, Q),
+  ppl_Polyhedron_get_constraints(P, CP),
+  ppl_Polyhedron_get_constraints(Q, CQ),
+  CP = [],
+  CQ = [1*A >= 1, 1*B >= 0],
+  ppl_delete_Polyhedron(P),
+  ppl_delete_Polyhedron(Q).
+
+% Tests ppl_Polyhedron_limited_BBRZ02_widening_assign
+% (using NNC Polyhedra).
+lim_bbrz02_widen_NNC :-
+  A = '$VAR'(0), B = '$VAR'(1),
+  ppl_new_Polyhedron_from_dimension(nnc, 2, P),
+  ppl_new_Polyhedron_from_constraints(nnc, [A >= 1, B >= 0], Q),
+  ppl_Polyhedron_add_constraints_and_minimize(Q, [A >= 1, B >= 0]),
+  ppl_Polyhedron_limited_BBRZ02_widening_assign(P, Q,
+                                             [A >= 2, B >= 1]),
+  ppl_Polyhedron_get_constraints(P, CS),
+  CS = [1*A >= 2, 1*B >= 1],
+  ppl_delete_Polyhedron(P),
+  ppl_delete_Polyhedron(Q).
+
 % Tests ppl_Polyhedron_H79_widening_assign
 % (using C Polyhedra).
-widen_C :-
+h79_widen_C :-
   A = '$VAR'(0), B = '$VAR'(1),
   ppl_new_Polyhedron_from_dimension(c, 2, P),
   ppl_new_Polyhedron_from_constraints(c, [A >= 1, B >= 0], Q),
@@ -393,7 +452,7 @@ widen_C :-
 
 % Tests ppl_Polyhedron_limited_H79_widening_assign
 % (using C Polyhedra).
-lim_widen_C :-
+lim_h79_widen_C :-
   A = '$VAR'(0), B = '$VAR'(1),
   ppl_new_Polyhedron_from_dimension(c, 2, P),
   ppl_new_Polyhedron_from_constraints(c, [A >= 1, B >= 0], Q),
@@ -406,7 +465,7 @@ lim_widen_C :-
 
 % Tests ppl_Polyhedron_H79_widening_assign
 % (using NNC Polyhedra).
-widen_NNC :-
+h79_widen_NNC :-
   A = '$VAR'(0), B = '$VAR'(1),
   ppl_new_Polyhedron_from_dimension(nnc, 2, P),
   ppl_new_Polyhedron_from_constraints(nnc, [A >= 1, B >= 0], Q),
@@ -420,7 +479,7 @@ widen_NNC :-
 
 % Tests ppl_Polyhedron_limited_H79_widening_assign
 % (using NNC Polyhedra).
-lim_widen_NNC :-
+lim_h79_widen_NNC :-
   A = '$VAR'(0), B = '$VAR'(1),
   ppl_new_Polyhedron_from_dimension(nnc, 2, P),
   ppl_new_Polyhedron_from_constraints(nnc, [A >= 1, B >= 0], Q),
