@@ -1110,6 +1110,48 @@ ppl_Polyhedron_poly_difference_assign_and_minimize(Prolog_term_ref t_lhs,
 }
 
 extern "C" Prolog_foreign_return_type
+ppl_Polyhedron_BBRZ02_widening_assign(Prolog_term_ref t_lhs,
+				      Prolog_term_ref t_rhs) {
+  try {
+    PPL::Polyhedron* lhs = term_to_polyhedron_handle(t_lhs);
+    const PPL::Polyhedron* rhs = term_to_polyhedron_handle(t_rhs);
+    CHECK(lhs);
+    CHECK(rhs);
+    PPL::Polyhedron& x = *static_cast<PPL::Polyhedron*>(lhs);
+    const PPL::Polyhedron& y = *static_cast<const PPL::Polyhedron*>(rhs);
+    x.BBRZ02_widening_assign(y);
+    return PROLOG_SUCCESS;
+  }
+  CATCH_ALL;
+  return PROLOG_FAILURE;
+}
+
+extern "C" Prolog_foreign_return_type
+ppl_Polyhedron_limited_BBRZ02_widening_assign(Prolog_term_ref t_lhs,
+					      Prolog_term_ref t_rhs,
+					      Prolog_term_ref t_clist) {
+  try {
+    PPL::Polyhedron* lhs = term_to_polyhedron_handle(t_lhs);
+    const PPL::Polyhedron* rhs = term_to_polyhedron_handle(t_rhs);
+    CHECK(lhs);
+    CHECK(rhs);
+    PPL::ConSys cs;
+    Prolog_term_ref c = Prolog_new_term_ref();
+
+    while (Prolog_is_cons(t_clist)) {
+      Prolog_get_cons(t_clist, c, t_clist);
+      cs.insert(build_constraint(c));
+    }
+    PPL::Polyhedron& x = *static_cast<PPL::Polyhedron*>(lhs);
+    const PPL::Polyhedron& y = *static_cast<const PPL::Polyhedron*>(rhs);
+    x.limited_BBRZ02_widening_assign(y, cs);
+    return PROLOG_SUCCESS;
+  }
+  CATCH_ALL;
+  return PROLOG_FAILURE;
+}
+
+extern "C" Prolog_foreign_return_type
 ppl_Polyhedron_H79_widening_assign(Prolog_term_ref t_lhs,
 				   Prolog_term_ref t_rhs) {
   try {
@@ -1120,18 +1162,6 @@ ppl_Polyhedron_H79_widening_assign(Prolog_term_ref t_lhs,
     PPL::Polyhedron& x = *static_cast<PPL::Polyhedron*>(lhs);
     const PPL::Polyhedron& y = *static_cast<const PPL::Polyhedron*>(rhs);
     x.H79_widening_assign(y);
-    return PROLOG_SUCCESS;
-  }
-  CATCH_ALL;
-  return PROLOG_FAILURE;
-}
-
-extern "C" Prolog_foreign_return_type
-ppl_Polyhedron_topological_closure_assign(Prolog_term_ref t_ph) {
-  try {
-    PPL::Polyhedron* ph = term_to_polyhedron_handle(t_ph);
-    CHECK(ph);
-    ph->topological_closure_assign();
     return PROLOG_SUCCESS;
   }
   CATCH_ALL;
@@ -1157,6 +1187,18 @@ ppl_Polyhedron_limited_H79_widening_assign(Prolog_term_ref t_lhs,
     PPL::Polyhedron& x = *static_cast<PPL::Polyhedron*>(lhs);
     const PPL::Polyhedron& y = *static_cast<const PPL::Polyhedron*>(rhs);
     x.limited_H79_widening_assign(y, cs);
+    return PROLOG_SUCCESS;
+  }
+  CATCH_ALL;
+  return PROLOG_FAILURE;
+}
+
+extern "C" Prolog_foreign_return_type
+ppl_Polyhedron_topological_closure_assign(Prolog_term_ref t_ph) {
+  try {
+    PPL::Polyhedron* ph = term_to_polyhedron_handle(t_ph);
+    CHECK(ph);
+    ph->topological_closure_assign();
     return PROLOG_SUCCESS;
   }
   CATCH_ALL;
